Updated email index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section>
     <h2>Contact</h2>
-    <p>Email: youremail@example.com</p>
+    <p>Email: devanandhv000@gmail.com</p>
     <p>GitHub: <a href="https://github.com/devanandh725" target="_blank">github.com/devanandh725</a></p>
   </section>
 </body>
